--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
+<!-- <app-header></app-header>
+<app-side-nav-bar></app-side-nav-bar> -->
 <router-outlet></router-outlet>
+<!-- <app-main-footer></app-main-footer> -->
