--- a/src/app/components/host-dashboard/success-dialog.scss
+++ b/src/app/components/host-dashboard/success-dialog.scss
@@ -1,12 +1,82 @@
- 
-.mat-input-element::-webkit-input-placeholder { /* Edge */
-    color: black;
+.mat-input-element::-webkit-input-placeholder {
+  /* Edge */
+  color: black;
+}
+
+.mat-input-element:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: black;
+}
+
+.mat-input-element::placeholder {
+  color: black;
+}
+
+.congo-dialog .mat-dialog-content {
+    height: 333px;
+}
+
+.gplus-button img{
+  width: 41px;
+  height: 41px;
+}
+.fb-button {
+  width: 100px;
+  height: 100px;
+  border: 2px solid #059be5;
+}
+.gplus-button {
+  width: 100px;
+  height: 100px;
+  border: 2px solid #f35128;
+}
+.tw-button {
+  width: 100px;
+  height: 100px;
+  border: 2px solid white;
+}
+
+.title-head {
+  text-align: center;
+  font-family: Poppins;
+  font-size: 4vw !important;
+  letter-spacing: 0.2px;
+  color: #ffffff;
+}
+.heading {
+  // margin-top: 40px;
+  // margin-bottom: 30px;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 3.5vw !important;
+  letter-spacing: 0.2px;
+  color: #ffffff;
+}
+.share-link {
+  // margin-bottom: 30px;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 3vw !important;
+  letter-spacing: 0.2px;
+  color: #ffffff;
+}
+@media only screen and(max-width:485px) {
+  .congo-dialog .mat-dialog-content {
+    height: 248px;
   }
-  
-  .mat-input-element:-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: black;
+  .fb-button {
+    width: 50px;
+    height: 50px;
+    border: 2px solid #059be5;
   }
-  
-  .mat-input-element::placeholder {
-    color: black;
+  .gplus-button {
+    width: 50px;
+    height: 50px;
+    border: 2px solid #f35128;
   }
+  .tw-button {
+    width: 50px;
+    height: 50px;
+    border: 2px solid white;
+  }
+}
