--- a/src/app/shared-components/main-footer/main-footer.component.scss
+++ b/src/app/shared-components/main-footer/main-footer.component.scss
@@ -1,111 +1,55 @@
-.footer{  
-    position: relative;
-    background: #1a1a1a;
-    color: #3F3F40;    
-    width: 100%;
-    height: fit-content;
-    padding-top: 10px;
-    a{
-      cursor: pointer;
-      color: #4F4F4F;
-      width: fit-content;
-    }  
-    a:hover{
-      color: #ffffff;
-    }
-    p{
-      font-family: Inter;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 28px;
-      /* identical to box height, or 175% */
-      
-      letter-spacing: -0.18px;
-      
-      /* Gray 5 */
-      
-      color: #E0E0E0;
-      
-      /* Inside Auto Layout */
-      
-      flex: none;
-      order: 0;
-      align-self: center;
-    }
+.footer-setup {
+  // margin-top:30px;
+//   padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #151414;
+}
+.footer-setup a {
+  display: block;
+  color: grey;
+}
+.footer-setup h6 {
+  color: white;
+}
+.footer-setup .social-links {
+  color: white;
+  display: flex;
+  // width:60px;
+  height: 30px;
+}
+.footer-setup .social-links img {
+  height: 30px;
+  padding: 3px;
+}
+.footer-setup .row .footer-section {
+    padding-top: 25px;
+}
+
+.stripe-pay {
+  p {
+    margin-top: 30px;
+    margin-bottom: 5px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 21px;
+    letter-spacing: 0.01px;
+    color: #989898;
   }
 
-  img{
-      height: 50px;
-      width: 50px;
+  button {
+    background: #32364e;
+    padding: 6px;
+    border-radius: 4px;
+    color: #ffffff;
+    font-size: 1.1vw;
   }
-
-  .footer-links{
-      display: grid;
-      font-family: Inter;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 16px;
-      line-height: 28px;
-      letter-spacing: -0.18px;
-      color: #4F4F4F;
-      order: 0;
-      align-self: center;
+  button b{
+    font-size: 1.5vw;
   }
-
-  .social{
-    p{
-      font-family: Inter;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 12px;
-      line-height: 21px;      
-      letter-spacing: 0.01px;
-      color: #989898;
-      }
-    .social-links{
-      a{
-          font-family: FontAwesome;      
-          font-size: 20px;
-          padding-right: 20px;        
-      }
-    }  
-  }
-
-  .stripe-pay{
-      p{
-        margin-top: 30px;
-        margin-bottom: 5px;
-        font-family: Inter;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 21px;        
-        letter-spacing: 0.01px;
-        color: #989898;
-      }
-
-      button{
-        background: #32364E;
-        padding: 6px;
-        border-radius: 4px;
-        color: #ffffff;
-      }
-  }
-
-  .copy-right{
-      p{
-        font-family: Inter;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 21px;
-        text-align: right;
-        letter-spacing: 0.01px;
-        color: #989898;
-
-      }
-      float: right;
-      margin-right: 15px;
-      margin-top: 50px;
-  }
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
