--- a/src/app/components/signup/signup.component.scss
+++ b/src/app/components/signup/signup.component.scss
@@ -1,171 +1,180 @@
 .landing {
-    background-color: black;
-    height: fit-content;
+  background-color: black;
+  height: fit-content;
+  width: 100%;
+  position: relative;
+  font-family: Lato;
+}
+
+
+.main-page {
+  height: 100%;
+}
+
+.left {
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: calc(100vh - 50px);
+  * {
+    font-family: "Inter", sans-serif;
+  }
+
+  .logoHolder {
+    position: absolute;
+    top: 0px;
+    left: 0;
+
+    img {
+      height: 50px;
+      width: 50px;
+
+    }
+
+  }
+
+  .container-fluid {
+    padding-left: 0px;
+    padding-right: 0px;
+
+    .row {
+      height: 100%;
+    }
+
+    .loginImageHolder {
+      width: 100%;
+      height: 100%;
+      background-size: cover !important;
+      background-position: center center !important;
+      background-repeat: no-repeat !important;
+    }
+  }
+
+}
+
+h1 {
+  color: #FFFFFF;
+  font-size: 25px;
+  text-align: center;
+  margin-top: 10px;
+  font-family: "Inter", sans-serif;
+}
+
+.form-body {
+  color: #A2A2A2;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+
+  .form-group {
+    margin-bottom: 5px;
+  }
+
+  input {
     width: 100%;
-    position: relative;
-    font-family: Lato;
+    height: 40px;
+    border: solid 1px #262626;
+    background: #262626;
+    color: #8F8F8F;
+    font-size: 14px;
+    padding: 0px 15px;
+    font-family: "Inter", sans-serif;
   }
-  
-  
-  .main-page {
-    height: 100%;
-  }
-  
-  .left {
-    height: 100%;
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: calc(100vh - 50px);
-  
-    .logoHolder {
-      position: absolute;
-      top: 0px;
-      left: 0;
-  
-      img {
-        height: 50px;
-        width: 50px;
-  
-      }
-  
-    }
-  
-    .container-fluid {
-      padding-left: 0px;
-      padding-right: 0px;
-  
-      .row {
-        height: 100%;
-      }
-  
-      .loginImageHolder {
-        width: 100%;
-        height: 100%;
-        background-size: cover !important;
-        background-position: center center !important;
-        background-repeat: no-repeat !important;
-      }
-    }
-  
-  }
-  
-  h1 {
-    color: #FFFFFF;
-    font-size: 25px;
-    text-align: center;
-    margin-top: 10px;
-  }
-  
-  .form-body {
+
+  label {
     color: #A2A2A2;
+    font-size: 12px;
+    font-family: "Inter", sans-serif;
+  }
+
+  h2 {
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 24px;
+    padding-bottom: 20px;
     width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
-  
-    .form-group {
-      margin-bottom: 5px;
-    }
-  
-    input {
-      width: 100%;
-      height: 40px;
-      border: solid 1px #262626;
-      background: #262626;
-      color: #8F8F8F;
-      font-size: 14px;
-      padding: 0px 15px;
-    }
-  
-    label {
-      color: #A2A2A2;
-      font-size: 12px;
-    }
-  
-    h2 {
-      color: #FFFFFF;
-      text-align: center;
-      font-size: 24px;
-      padding-bottom: 20px;
-      width: 100%;
-    }
-  
-    p {
+    font-family: "Inter", sans-serif;
+  }
+
+  p {
+    color: #818181;
+    text-align: center;
+    font-size: 12px;
+    font-family: "Inter", sans-serif;
+
+    a {
+      padding-left: 10px;
       color: #818181;
-      text-align: center;
-      font-size: 12px;
-  
-      a {
-        padding-left: 10px;
-        color: #818181;
-      }
-  
-      a:hover {
-        color: white;
-        cursor: pointer;
-      }
+      font-family: "Inter", sans-serif;
     }
-  
-    button {
-      border: 1px solid #4FB400;
-      color: #FFFFFF;
-      background: #4FB400;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 17px;
-      text-align: center;
-      letter-spacing: 0.01em;
-      text-transform: capitalize;
-      width: 100%;
-      height: 40px;
-      margin-top: 10px;
-      margin-bottom: 14px;
-    }
-  
-    .new-hr {
-      display: flex;
-      align-items: center;
-      width: 100%;
-  
-      hr {
-        border: 0.1px solid #414141;
-        width: 158px;
-      }
-    }
-  
-    .bottom-form {
-      width: 100%;
-    }
-  
-    .social-button {
-      .google {
-        background: #DD4B39;
-        border: none;
-      }
-  
-      .facebook {
-        background: #3B5998;
-        border: none;
-      }
+
+    a:hover {
+      color: white;
+      cursor: pointer;
     }
   }
-  
-  
-  .formHolder {
+
+  button {
+    border: 1px solid #4FB400;
+    color: #FFFFFF;
+    background: #4FB400;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    letter-spacing: 0.01em;
+    text-transform: capitalize;
     width: 100%;
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    height: 40px;
+    margin-top: 10px;
+    margin-bottom: 14px;
   }
+
+  .new-hr {
+    display: flex;
+    align-items: center;
+    width: 100%;
+
+    hr {
+      border: 0.1px solid #414141;
+      width: 158px;
+    }
+  }
+
+  .bottom-form {
+    width: 100%;
+  }
+
+  .social-button {
+    .google {
+      background: #DD4B39;
+      border: none;
+    }
+
+    .facebook {
+      background: #3B5998;
+      border: none;
+    }
+  }
+}
+
+
+.formHolder {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
