--- a/src/app/shared-components/minified-footer/minified-footer.component.html
+++ b/src/app/shared-components/minified-footer/minified-footer.component.html
@@ -1,18 +1,31 @@
 <footer class="footer">
-    <div class="container">
-        <div>
-            <p style="color: #FFFFFF;font-size: 20px;">Sairyō</p>
+  <div class="container">
+
+    <div class="row main-footer align-items-center">
+      <div class="col-md-6">
+        <div class="footer-left">
+         
+          <ul class="footercntnt">
+              <li> <p style="color: #FFFFFF;font-size: 20px;">Sairyō</p></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+         
         </div>
-        <div class="row main-footer">
-                <div class="footer-left">
-                    <p><a>About Us</a></p>
-                    <p><a>Contact</a></p>
-                </div>
-                <div class="footer-right">
-                    <p>Legal</p>
-                    <p>|</p>
-                    <p>© 2020 Sairyō | All rights reserved.</p>
-            </div>            
+      </div>
+
+      <div class="col-md-6">
+        <div class="footer-right footercntnt">
+            <ul>
+                <li><a href="#">Legal</a></li>
+                <li> <p class="copyright"> © 2020 Sairyō | All rights reserved.</p></li>
+            </ul>
+         
+        
+         
         </div>
-    </div>    
+      </div>
+
+    </div>
+  </div>
 </footer>
